--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -33,7 +33,7 @@
           <h5 class="text-uppercase mb-0">Links</h5>
           <ul class="list-unstyled">
             <li>
-              <a href="/about" class="text-white">About Us</a>
+              <a href="/about" class="text-white">About</a>
             </li>
             <li>
               <a href="#!" class="text-white">Link 3</a>
