--- a/app/views/components/_menu.html.erb
+++ b/app/views/components/_menu.html.erb
@@ -8,6 +8,11 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
       <ul class="navbar-nav">
+        <li class="nav-item"><%= link_to "Genders", "/genders" , class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Prior career", "/professions" , class: 'nav-link', title: 'Primary career pre national politics' %></li>
+        <li class="nav-item"><%= link_to "Education", "/qualification_levels" , class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Field Of Study", "/field_of_studies" , class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Candidate List", "/candidates" , class: 'nav-link' %></li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
