--- a/app/views/components/_secondary-menu.erb
+++ b/app/views/components/_secondary-menu.erb
@@ -5,15 +5,11 @@
     </button>
     <div class="collapse navbar-collapse" id="secondary-menu">
       <ul class="navbar-nav">
-        <li class="nav-item"><%= link_to "Candidates", "/candidates" , class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to "Genders", "/genders" , class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to "Parties", "/parties" , class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to "Primary career", "/professions" , class: 'nav-link', title: 'Primary career pre national politics' %></li>
-
+        <li class="nav-item"><%= link_to "Prior career", "/professions" , class: 'nav-link', title: 'Primary career pre national politics' %></li>
         <li class="nav-item"><%= link_to "Education", "/qualification_levels" , class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to "Field Of Study", "/field_of_studies" , class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to "Union Affiliation", "/unions" , class: 'nav-link' %></li>
-        <li class="nav-item"><%= link_to "Factional Affiliation", "/factions" , class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Candidate List", "/candidates" , class: 'nav-link' %></li>
       </ul>
     </div>
   </div>
