much work on saturday

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -159,6 +159,9 @@ h2.group-header {
   &.darkmagenta:before {
     background-color: darkmagenta;
   }
+  &.brown:before {
+    background-color: brown;
+  }
 }
 
 //.legend.blue {
