--- a/app/views/field_of_studies/index.html.erb
+++ b/app/views/field_of_studies/index.html.erb
@@ -1,5 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
+<div class="container search-container">
+  <div id="search">
+    <%= render :partial => 'home/search_form' %>
+    <p>Search for any Candidate, Electorate, Party, Career, Religion, Education, Union or Faction </p>
+  </div>
+</div>
+
 <h1>Field of studies</h1>
 
 <p>Focussing only on Tertiary and further studies, we discovered that the politicians standing for election had focussed their studies on a narrow selection of educational oppotunities relative to the population at large</p>
