--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
 
   <%= javascript_importmap_tags %>
+  <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
 </head>
 
 <body>
