Update footer links and some text

--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -19,10 +19,7 @@
           <h5 class="text-uppercase">Contact Us</h5>
           <ul class="list-unstyled mb-0">
             <li>
-              02 1234 234
-            </li>
-            <li>
-              jane.doe@company.com
+              <a href="mailto:info@whothebloodyhellarethey.com">info@whothebloodyhellarethey.com</a>
             </li>
           </ul>
         </div>
@@ -36,10 +33,10 @@
               <a href="/about" class="text-white">About</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 3</a>
+              <a href="/disclaimer" class="text-white">Disclaimer</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 4</a>
+              <a href="/privacy" class="text-white">Privacy Statement</a>
             </li>
           </ul>
         </div>
