--- a/app/views/field_of_studies/index.html.erb
+++ b/app/views/field_of_studies/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<h1>Field of studies</h1>
+<h1>Field of study</h1>
 
 <p>Focussing only on Tertiary and further studies, we discovered that the politicians standing for election had focussed their studies on a narrow selection of educational oppotunities relative to the population at large</p>
 
