Update FAQ text

--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -21,22 +21,24 @@ No. Nope. We’re independent.
 Who is funding you?
 </h3>
 <p>
-It cost $24.92 to buy the domain and $25 for a* bottle of rose to drink during a meeting.
+  We’re self funded and have spent:
 </p>
-<p>
-(*not strictly true, there may have been more than one...)
-</p>
+<ul>
+  <li>$200 on a logo (isn’t it great?)</li>
+  <li>$60 on the domain name and email account</li>
+  <li>$25 for a* bottle of rose to drink during a meeting</li>
+</ul>
 <h3>
 You have some facts wrong!
 </h3>
 <p>
-  We have listed all our sources here (insert link to data file when finalised). If you think we’ve made an error, we are happy to review any evidence you have. Shoot us the data via this <a href="https://forms.gle/gzNsCNeW1ViKKiPz7">form</a> with some evidence and we will review and provide an outcome.
+  We’re super happy to review our data.  If you think we’ve made an error shoot us the data via this <a href="https://docs.google.com/forms/d/1pL6t5vz5sDTzki3J8eiEVYMxznFzPgPbnz70M4fxvpo/edit?usp=sharing">form</a> with some evidence and we will review and provide an outcome.
 </p>
 <h3>
 How do I contribute a piece of data?
 </h3>
 <p>
-  Ahhh thanks…. That’s the spirit. Fill out the form <a href="https://forms.gle/gzNsCNeW1ViKKiPz7">here</a>
+  Ahhh thanks…. That’s the spirit. Fill out the form <a href="https://docs.google.com/forms/d/1pL6t5vz5sDTzki3J8eiEVYMxznFzPgPbnz70M4fxvpo/edit?usp=sharing">here</a>
 </p>
 <h3>
 Can we look at other categories of information?
@@ -47,20 +49,29 @@ We’re a bit limited for time and resource for Election 2022.  Maybe for the ne
 How can I get involved?
 </h3>
 <p>
-We’d love to hear from you!  Get in touch via info@whothebloodyhellarethey.com.
+We’d love to hear from you!  Get in touch via <a href="mailto:info@whothebloodyhellarethey.com">info@whothebloodyhellarethey.com</a>.
 </p>
 <h3>
 How do you gather the data?
 </h3>
 <p>
-  We have relied on volunteers to scour the internet to find as much info as possible.  We’ve listed all our sources (insert link) and would love to hear from you if you have anything to add or any correction.  Send us your input via this <a href="https://forms.gle/gzNsCNeW1ViKKiPz7">form.</a>
+  We have relied on volunteers to scour the internet to find as much info as possible and would love to hear from you if you have anything to add or any correction. Send us your input via this <a href="https://docs.google.com/forms/d/1pL6t5vz5sDTzki3J8eiEVYMxznFzPgPbnz70M4fxvpo/edit?usp=sharing">form.</a>
 </p>
 <h3>
 How did you decide whether the seat is winnable by a particular candidate?
 </h3>
 <p>
-This is purely data based (though of course we have our own opinions too).  We used the % swing required for the seat to change hands based on the results from the last election.  Any new candidate with a 7% or less swing required to win the seat is a potential winner.  Any incumbent is a potential winner.
+  This is purely data based (though of course we have our own opinions too). We used the % swing required for the seat to change hands based on the results from the last election.
+  <table class="faq-table table">
+    <thead><th></th><th scope="col">Incumbent margin >=6%</th><th scope="col">Incumbent margin 0 to 6%</th></thead>
+    <tr><th scope="row">Incumbent</th><td>Safe</td><td>Swing</td></tr>
+    <tr><th scope="row">Challenger</th><td>Challenger</td><td>Swing</td></tr>
+  </table>
 </p>
+<h3>How did you come up with the General Population Data?</h3>
+<p>We’ve used data from the Australian Bureau of Statistics information for the majority of this data.  Feel free to get in touch if you’d like more <a href="mailto:info@whothebloodyhellarethey.com">info</a></p>
+<h3>How did you come up with the Prior Career information?</h3>
+<p>There’s limited info available for new candidates so we concentrated on current MPs and Senators.  We used the data available on <a href="https://www.aph.gov.au/Senators_and_Members">https://www.aph.gov.au/Senators_and_Members</a>.</p>
 <h3>
 What are the factions and what do they care about?
 </h3>
