--- a/app/views/professions/index.html.erb
+++ b/app/views/professions/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<h1>Professions</h1>
+<h1>Prior Career</h1>
 
 <p>We have reliable data for the incumbent MPs, and have limited our data set here to those candidates. Data is from Australian Parliament House website</p>
 <p>for the "Other category below, we have combined the following professions; "Managers", "Professionals", "Machinery operators and drivers", "Clerical and administrative workers", "Labourers"</p>
