--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -8,8 +8,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <h2 class="col-lg-12">Gender</h2>
-  <div class="col-lg-2">
+  <div class="row">
     <h3>Legend</h3>
       <div class="legend blue float-start float-lg-none">Male</div>
       <div class="legend pink float-start float-lg-none">Female</div>
