--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,4 @@
 <div class="container">
-<h3>An Insight into who the candidates are for Australia's major political parties at the upcoming election</h3>
-<p>How much do we really know about the candidates for election in 2022?  What do their factions believe in?  What influence do unions have in their views?  Or their religion?   What about their education level?  Their prior careers?  Do the people seeking election truly represent the demographics of our country?  We think not, but take a look at the data and make up your own mind!</p>
-</div>
-<div class="container search-container">
-  <div id="search">
-    <%= render "search_form" %>
-    <p>Search for any Candidate, Electorate, Party, Prior Career, Education, Union or Faction </p>
-  </div>
-</div>
-
-<div class="container">
   <div class="row">
     <div class="col-md">
       <h2>Some header</h2>
@@ -17,10 +6,6 @@
     </div>
     <div class="col-md">
       <h2>Some header 2</h2>
-      <p>arcu. Cras fringilla hendrerit mattis. Quisque nec turpis at felis cursus blandit vitae sed magna. Duis tincidunt condimentum diam id consectetur. Phasellus facilisis odio quam, vitae porta nisl interdum non. Mauris quis mollis ex. Etiam euismod scelerisque justo, vitae sollicitu</p>
-    </div>
-    <div class="col-md">
-      <h2>Some header 3</h2>
       <p>arcu. Cras fringilla hendrerit mattis. Quisque nec turpis at felis cursus blandit vitae sed magna. Duis tincidunt condimentum diam id consectetur. Phasellus facilisis odio quam, vitae porta nisl interdum non. Mauris quis mollis ex. Etiam euismod scelerisque justo, vitae sollicitu</p>
     </div>
   </div>
@@ -34,8 +19,12 @@
     <div class="col-md">
       <%= link_to "Button Secondary", "/candidates", class: "btn btn-secondary" %>
     </div>
-    <div class="col-md">
-      <%= link_to "Button Outline", "/candidates", class: "btn btn-outline-primary" %>
-    </div>
+  </div>
+</div>
+
+<div class="container search-container">
+  <div id="search">
+    <%= render "search_form" %>
+    <p>Search for any Candidate, Electorate, Party, Prior Career, Education or Union </p>
   </div>
 </div>
