--- a/app/views/professions/index.html.erb
+++ b/app/views/professions/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container search-container">
   <div id="search">
     <%= render :partial => 'home/search_form' %>
-    <p>Search for any Candidate, Electorate, Party, Prior Career, Education, Union or Faction </p>
+    <p>Search for any Candidate, Electorate, Party, Prior Career, Education or Union </p>
   </div>
 </div>
 
@@ -17,27 +17,21 @@
 
 
 <div class="flex-container row">
-  <div class="col">
+  <div class="row">
     <div id="legend">
       <h2>Legend</h2>
-        <div class="legend red float-start float-lg-none">Other</div>
-
-        <div class="legend blue float-start float-lg-none">Military</div>
-        <div class="legend green float-start float-lg-none">Doctors</div>
-        <div class="legend yellow float-start float-lg-none">Teachers</div>
-        <div class="legend indigo float-start float-lg-none">Journalists</div>
-
-
-
-        <div class="legend pink float-start float-lg-none">Union Officials</div>
-        <div class="legend purple float-start float-lg-none">Political Staffers</div>
-        <div class="legend teal float-start float-lg-none">Community and personal service workers</div>
-        <div class="legend orange float-start float-lg-none">Lawyers</div>
-        <div class="legend maroon float-start float-lg-none">Sales workers</div>
-
-        <div class="legend lime float-start float-lg-none">Farmer</div>
-        <div class="legend gray float-start float-lg-none">Unknown</div>
-
+        <div class="legend red float-start">Other</div>
+        <div class="legend blue float-start">Military</div>
+        <div class="legend green float-start">Doctors</div>
+        <div class="legend yellow float-start">Teachers</div>
+        <div class="legend indigo float-start">Journalists</div>
+        <div class="legend pink float-start">Union Officials</div>
+        <div class="legend purple float-start">Political Staffers</div>
+        <div class="legend teal float-start">Community and personal service workers</div>
+        <div class="legend orange float-start">Lawyers</div>
+        <div class="legend maroon float-start">Sales workers</div>
+        <div class="legend lime float-start">Farmer</div>
+        <div class="legend gray float-start">Unknown</div>
     </div>
   </div>
   <div class="col">
