--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,9 +1,20 @@
-<% @results.each do |result| %>
-  <% record = result.searchable_type.constantize.find(result.searchable_id) %>
+<% if @results.empty?%>
 
-  <table>
-    <tr>
-      <tr><%= link_to record.name, record %></tr>
-    </tr>
-  </table>
+  <div class="container search-container">
+    <div id="search">
+      <p>No results match your search. Please try again</p>
+      <%= render :partial => 'home/search_form' %>
+    </div>
+  </div>
+<% else %>
+  <% @results.each do |result| %>
+    <% record = result.searchable_type.constantize.find(result.searchable_id) %>
+
+    <table>
+      <tr>
+        <tr><%= link_to record.name, record %></tr>
+      </tr>
+    </table>
+  <% end %>
 <% end %>
+
