--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -8,9 +8,7 @@
         <!--Grid column-->
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
           <h5 class="text-uppercase">Who the bloody hell are they</h5>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ipsam nihil amet. Odio eveniet id cum?
-            Molestias maiores repudiandae labore atque reiciendis laboriosam, blanditiis, eos eaque commodi at
-            distinctio ipsam.</p>
+          <p>On May 21, we will elect approximately 100 people from either the Labour Party or the Coalition to govern the country. But beyond the “brand” of Liberal/National & Labour Parties, what do we know about the 377 candidates they have nominated? Not as much as you might think.</p>
         </div>
         <!--Grid column-->
 
